Enable nested_virt for sc10 kvm
Depends-On: https://review.opendev.org/c/openstack/tripleo-quickstart-extras/+/782020

Change-Id: Idb47a9d699f88301a988eb950fb0bc107e32dc16
Signed-off-by: Chandan Kumar (raukadah) <chkumar@redhat.com>

--- a/zuul.d/standalone-jobs.yaml
+++ b/zuul.d/standalone-jobs.yaml
@@ -335,6 +335,7 @@
     vars:
       tags:
         - build
+        - nested_virt
         - standalone
         - octavia
       # using featureset062 is tech debt and should be addressed at a future sprint
