Test puppet facts
Change-Id: I420e8c277afc0d83f4cefafd6a8a9c873801b9a0

--- a/zuul.d/project-templates.yaml
+++ b/zuul.d/project-templates.yaml
@@ -36,6 +36,15 @@
             branches: ^(queens|rocky|stein|train)-rdo$
         - distgit-cbs-validate-centos8
         - distgit-cbs-validate-centos8-stream
+        - weirdo-dlrn-master-packstack-scenario001-centos8:
+            dependencies:
+              - DLRN-rpmbuild-centos8
+        - weirdo-dlrn-master-packstack-scenario002-centos8:
+            dependencies:
+              - DLRN-rpmbuild-centos8
+        - weirdo-dlrn-master-packstack-scenario003-centos8:
+            dependencies:
+              - DLRN-rpmbuild-centos8
     gate:
       jobs:
         - DLRN-rpmbuild
