--- a/zuul.d/project-templates-components.yaml
+++ b/zuul.d/project-templates-components.yaml
@@ -244,6 +244,125 @@
         - periodic-tripleo-centos-8-master-component-ui-promote-to-promoted-components
         - periodic-tripleo-centos-8-master-component-validation-promote-to-promoted-components
 
+## wallaby
+#############################################################
+- project-template:
+    name: component-pipeline-wallaby
+    openstack-component-baremetal:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-baremetal-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-baremetal-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-baremetal-promote-consistent-to-component-ci-testing
+    openstack-component-cinder:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-cinder-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-cinder-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-cinder-promote-consistent-to-component-ci-testing
+    openstack-component-clients:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-clients-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-clients-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-clients-promote-consistent-to-component-ci-testing
+    openstack-component-cloudops:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-cloudops-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-cloudops-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-cloudops-promote-consistent-to-component-ci-testing
+    openstack-component-common:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-common-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-common-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-common-promote-consistent-to-component-ci-testing
+    openstack-component-compute:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-compute-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-compute-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-compute-promote-consistent-to-component-ci-testing
+    openstack-component-glance:
+      jobs:
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-glance-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-glance-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-glance-promote-consistent-to-component-ci-testing
+    openstack-component-manila:
+      jobs:
+        - periodic-tripleo-ci-centos-8-scenario004-standalone-manila-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-manila-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-manila-promote-consistent-to-component-ci-testing
+    openstack-component-network:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-network-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-network-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-network-promote-consistent-to-component-ci-testing
+    openstack-component-octavia:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-octavia-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-octavia-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-octavia-promote-consistent-to-component-ci-testing
+    openstack-component-security:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-security-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-security-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-security-promote-consistent-to-component-ci-testing
+    openstack-component-swift:
+      jobs:
+        - periodic-tripleo-ci-centos-8-scenario002-standalone-swift-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-swift-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-swift-promote-consistent-to-component-ci-testing
+    openstack-component-tripleo:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-tripleo-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-tripleo-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-tripleo-promote-consistent-to-component-ci-testing
+    openstack-component-tempest:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-tempest-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-tempest-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-tempest-promote-consistent-to-component-ci-testing
+    openstack-component-ui:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-ui-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-ui-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-ui-promote-consistent-to-component-ci-testing
+    openstack-component-validation:
+      jobs:
+        - periodic-tripleo-ci-centos-8-standalone-validation-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-validation-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-centos-8-wallaby-component-validation-promote-consistent-to-component-ci-testing
+    openstack-promote-component:
+      jobs:
+        - periodic-tripleo-centos-8-wallaby-component-baremetal-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-cinder-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-clients-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-cloudops-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-common-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-compute-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-glance-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-manila-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-network-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-octavia-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-security-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-swift-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-tripleo-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-tempest-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-ui-promote-to-promoted-components
+        - periodic-tripleo-centos-8-wallaby-component-validation-promote-to-promoted-components
+
 ## victoria
 #############################################################
 - project-template:
