--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -2044,6 +2044,35 @@
     vars:
       component: glance
 
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-cloudops-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-cloudops-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
 ## victoria
 - job:
     name: periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-victoria
