--- a/zuul.d/project-templates-components.yaml
+++ b/zuul.d/project-templates-components.yaml
@@ -259,6 +259,9 @@
         - periodic-tripleo-ci-centos-8-standalone-cinder-wallaby:
             dependencies:
               - periodic-tripleo-centos-8-wallaby-component-cinder-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-cinder-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-wallaby-component-cinder-promote-consistent-to-component-ci-testing
     openstack-component-clients:
       jobs:
@@ -271,10 +274,16 @@
         - periodic-tripleo-ci-centos-8-standalone-cloudops-wallaby:
             dependencies:
               - periodic-tripleo-centos-8-wallaby-component-cloudops-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-cloudops-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-cloudops-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-wallaby-component-cloudops-promote-consistent-to-component-ci-testing
     openstack-component-common:
       jobs:
         - periodic-tripleo-ci-centos-8-standalone-common-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-common-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-common-wallaby:
             dependencies:
               - periodic-tripleo-centos-8-wallaby-component-common-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-wallaby-component-common-promote-consistent-to-component-ci-testing
@@ -287,6 +296,9 @@
     openstack-component-glance:
       jobs:
         - periodic-tripleo-ci-centos-8-standalone-glance-wallaby:
+            dependencies:
+              - periodic-tripleo-centos-8-wallaby-component-glance-promote-consistent-to-component-ci-testing
+        - periodic-tripleo-ci-centos-8-scenario001-standalone-glance-wallaby:
             dependencies:
               - periodic-tripleo-centos-8-wallaby-component-glance-promote-consistent-to-component-ci-testing
         - periodic-tripleo-centos-8-wallaby-component-glance-promote-consistent-to-component-ci-testing
