[WIP] : Add wallaby SC001 standalone component jobs
Adding all scenario001 standalone component jobs definations
for wallaby release.

Change-Id: Id931d3032218018664f1ac3c64cf21c46487ce1b

--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -1929,6 +1929,34 @@
     vars:
       component: glance
 
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-cloudops-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-cloudops-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-glance-master
+    vars:
+      release: wallaby
+
 ## victoria
 - job:
     name: periodic-tripleo-ci-centos-8-scenario001-standalone-cinder-victoria
