[WIP] : Add wallaby SC002 standalone component jobs
Adding all scenario002 standalone component jobs definations
for wallaby release.

Change-Id: I17fb14f6d9e0776af4c61686bc0ca347c3d79dea

--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -2052,6 +2052,35 @@
     vars:
       component: swift
 
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario002-standalone-cloudops-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-cloudops-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario002-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario002-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario002-standalone-swift-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-swift-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
 ## victoria
 - job:
     name: periodic-tripleo-ci-centos-8-scenario002-standalone-cloudops-victoria
