DNM : Add wallaby SC003 standalone component jobs
Adding all scenario003 standalone component jobs definations
for wallaby release.

Change-Id: Ia4759627e686f23761a4f6f17ca94de4f5a5b655

--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -2163,6 +2163,21 @@
     vars:
       component: glance
 
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario003-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario003-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
 ## victoria
 - job:
     name: periodic-tripleo-ci-centos-8-scenario003-standalone-common-victoria
