--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -2248,6 +2248,43 @@
     vars:
       component: tripleo
 
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-cinder-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-cinder-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-manila-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-manila-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-tripleo-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-tripleo-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
 ## victoria
 - job:
     name: periodic-tripleo-ci-centos-8-scenario004-standalone-cinder-victoria
