Add wallaby SC003 and SC004 standalone component jobs
Adding all scenario003 and scenario004 standalone component
jobs definations for wallaby release.

Change-Id: Ic9b3810bd3c48ef59ea5327cfb2ddaa00db44974

--- a/zuul.d/component-jobs.yaml
+++ b/zuul.d/component-jobs.yaml
@@ -2336,6 +2336,21 @@
     vars:
       component: glance
 
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario003-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario003-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
 ## victoria
 - job:
     name: periodic-tripleo-ci-centos-8-scenario003-standalone-common-victoria
@@ -2420,6 +2435,43 @@
     parent: periodic-tripleo-ci-centos-8-scenario004-standalone-component-master
     vars:
       component: tripleo
+
+## wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-cinder-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-cinder-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-common-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-common-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-glance-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-glance-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-manila-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-manila-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-tripleo-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-tripleo-master
+    vars:
+      release: wallaby
+      branch_override: 'stable/wallaby'
 
 ## victoria
 - job:
