--- a/zuul.d/integration-jobs-wallaby.yaml
+++ b/zuul.d/integration-jobs-wallaby.yaml
@@ -51,10 +51,194 @@
       branch_override: "stable/wallaby"
       release: wallaby
 
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario001-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario001-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario002-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario002-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario003-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario003-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario004-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario004-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario007-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario007-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario010-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario010-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario010-kvm-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario012-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario012-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-wallaby
+    parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-api-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-wallaby
+    parent: periodic-tripleo-ci-centos-8-standalone-full-tempest-scenario-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario010-ovn-provider-standalone-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-on-multinode-ipa-wallaby
+    parent: periodic-tripleo-ci-centos-8-standalone-on-multinode-ipa-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-standalone-upgrade-wallaby
+    parent: periodic-tripleo-ci-centos-8-standalone-upgrade-master
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+## multinode
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset010-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset030-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset030-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-wallaby
+    parent: periodic-tripleo-ci-centos-8-scenario000-multinode-oooq-container-updates-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
 ## ovb
 - job:
     name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-wallaby
     parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset001-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-1ctlr_1comp-featureset002-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp-featureset035-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset037-updates-wallaby
+    parent: periodic-tripleo-ci-centos-8-multinode-1ctlr-featureset037-updates-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-1ctlr_2comp-featureset020-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-wallaby
+    parent: periodic-tripleo-ci-centos-8-ovb-3ctlr_1comp_1supp-featureset039-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+
+
+## undercloud
+- job:
+    name: periodic-tripleo-ci-centos-8-containers-undercloud-minion-wallaby
+    parent: periodic-tripleo-ci-centos-8-containers-undercloud-minion-master
+    override-checkout: "stable/wallaby"
+    vars:
+      branch_override: "stable/wallaby"
+      release: wallaby
+- job:
+    name: periodic-tripleo-ci-centos-8-undercloud-containers-wallaby
+    parent: periodic-tripleo-ci-centos-8-undercloud-containers-master
     override-checkout: "stable/wallaby"
     vars:
       branch_override: "stable/wallaby"
